# atmacup15

./: README.md  pyproject.toml
ipynb/: e001_first_sub.ipynb  e002_use_user_id.ipynb  e003_seen_unseen_model.ipynb  e004_user_id_agg_count.ipynb  e005_user_id_tar_enc.ipynb  e006_del_user_id.ipynb  e007_use_mat_dec_feat.ipynb  e008_add_user_id_implicit_agg.ipynb  e009_add_anime_id_agg.ipynb  e010_add_anime2vec.ipynb  e011_add_implicit_anime2vec.ipynb  e012_delete_num_leaves.ipynb  e013_add_title_feature.ipynb  e014_anime2vec_clustering.ipynb  e015_use_anime_implicit_agg.ipynb  e016_anime2vec_cluster_agg.ipynb  e017_add_anime_vector_and_clustre.ipynb  e018_rate_delete_tar_enc.ipynb
ipynb/NCF/: ncf.ipynb  ncf.py  ncf_gpt.py  ncf_gpt_anime_feat.py  ncf_gpt_train_valid.py  ncf_gpt_train_valid_norm_obj.py
ipynb/anime2vec/: Anime2Vec(Explicit Implicit Feedback)+LightGBM.ipynb
ipynb/eda/: anime.ipynb  base_eda.ipynb  genre_anime_mean_score_corr.ipynb  overlapping_id.ipynb  score_eda.ipynb  user_anime_id_matrix.ipynb
ipynb/make_feature/: genre_w2v.ipynb
ipynb/surprise/: surprise.ipynb
