[tool.poetry]
name = "atmacup15"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.3,<3.13"
ipykernel = "^6.24.0"
polars = "^0.18.7"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
japanize-matplotlib = "^1.1.3"
matplotlib-venn = "^0.11.9"
wheel = "^0.40.0"
cmake = "^3.26.4"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
pyarrow = "^12.0.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
wandb = "^0.15.5"
gensim = "^4.3.1"
sudachipy = "^0.6.7"
sudachidict-core = "^20230110"
tqdm = "^4.65.0"
levenshtein = "^0.21.1"
adjusttext = "^0.8"
torch = "^2.0.1"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
